# skills

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  nexxen-research-agent-prompts.md  run-mcp.sh
fathom/arch-map/: .gitignore  README.md  package.json  pyproject.toml  ui-tests.js
fathom/arch-map/.claude/: settings.json
fathom/arch-map/arch_map/: __init__.py  actions.py  base.py  craft_ingest.py  dispatch.py  grill_text.py  import_graph.py  ledger.py  map_registry.py  measure.py  model.py  prompts.py  reads.py  resources.py  serialize.py  server.py  signals.py  store.py  view_builder.py  whatif.py  worktrees.py
fathom/arch-map/arch_map/ui/: decisions.html
fathom/arch-map/evals/: run_eval.py
fathom/arch-map/evals/fixture/: consumer.py  dead_comments.py  deep_nest.py  deep_service.py  long_function.py  magic_values.py  many_params.py  net_client.py  overstated.py  provider.py  untested.py  (+3 more)
fathom/arch-map/tests/: conftest.py  test_board.py  test_craft_ingest.py  test_dispatch.py  test_doc_registry.py  test_doc_tools.py  test_eval_accuracy.py  test_graph_metrics.py  test_http_backend.py  test_import_graph.py  test_ledger.py  test_map_registry.py  test_measure.py  test_signals.py  test_spine_resources.py  test_store.py  test_suggestion_queue.py  test_tool_responses.py  test_tool_surface.py  test_tools_deepening.py  test_tools_dispatchers.py  test_tools_maps.py  test_tools_modules.py  test_tools_plan.py  test_tools_truth.py  test_tools_views.py  test_tools_worktrees.py  test_ui_inlining.py  test_web_entry.py  test_whatif.py  test_worktrees.py
(+169 files in other folders)
