[project]
name = "arch-map"
version = "0.1.0"
description = "A living codebase architecture map served as a FastMCP server with an MCP Apps network-graph UI."
requires-python = ">=3.10"
dependencies = [
  # Core FastMCP on the 3.x line. 3.2+ ships the `apps` module that Lane 2
  # (Generative UI / Prefab) needs; Lane 1's tool `meta` + `ui://` resource are
  # unchanged across the 2.x->3.x bump. Install the `generative` extra below to
  # pull the apps subdependencies; without it the server degrades to Lane 1 only.
  "fastmcp>=3.2,<4",
]

[project.optional-dependencies]
# Lane 2 — FastMCP's Generative UI (Prefab). Adds the `apps` extra (prefab-ui,
# fastmcp-slim, ...) on top of the 3.x core. The server detects it at runtime
# (try/except) and degrades to Lane 1 when absent.
# Install with:  uv pip install -e ".[generative]"
generative = ["fastmcp[apps]>=3.2"]
# Test harness — interface tests for the model/server core.
# Install with:  uv pip install -e ".[test]"   (then: python -m pytest)
test = ["pytest>=8"]

[tool.pytest.ini_options]
# Put the package root on the path so `import arch_map` works without an install,
# and keep discovery to the tests/ tree.
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
arch-map = "arch_map.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
